--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
   <!-- Vertical menu -->
   <div id="fabMenu" class="fab-menu" role="menu" aria-label="Chat options">
-    <a class="fab-item fab-whatsapp" href="https://wa.me/919999999999?text=Hi%20KN%20Overseas%2C%20I%27d%20like%20to%20know%20more." target="_blank" rel="noopener" role="menuitem" aria-label="WhatsApp chat">
+    <a class="fab-item fab-whatsapp" href="https://wa.me/91999999?text=Hi%20KN%20Overseas%2C%20I%27d%20like%20to%20know%20more." target="_blank" rel="noopener" role="menuitem" aria-label="WhatsApp chat">
       <i class="fa-brands fa-whatsapp"></i>
     </a>
-    <a class="fab-item fab-phone" href="tel:+919999999999" role="menuitem" aria-label="Call us">
+    <a class="fab-item fab-phone" href="tel:+919999999" role="menuitem" aria-label="Call us">
       <i class="fa-solid fa-phone"></i>
     </a>
-    <a class="fab-item fab-mail" href="mailto:info@knoverseas.com" role="menuitem" aria-label="Email us">
+    <a class="fab-item fab-mail" href="mailto:info@knoverseas.example.com" role="menuitem" aria-label="Email us">
       <i class="fa-solid fa-envelope"></i>
     </a>
   </div>
@@ -441,7 +441,7 @@
                 <div class="ct-card">
                     <span class="ct-icon"><i class="fa-solid fa-envelope-open-text"></i></span>
                     <h3>Write To Us</h3>
-                    <p><a href="mailto:info@knoverseas.com">info@knoverseas.com</a></p>
+                    <p><a href="mailto:info@knoverseas.example.com">info@knoverseas.example.com</a></p>
                 </div>
 
                 <div class="ct-card">
@@ -700,5 +700,6 @@
 
     <script src="app.js"></script>
 </body>
+
 
 </html>
