--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
 
   <!-- Vertical menu -->
   <div id="fabMenu" class="fab-menu" role="menu" aria-label="Chat options">
-    <a class="fab-item fab-whatsapp" href="https://wa.me/919999999999?text=Hi%20KN%20Overseas%2C%20I%27d%20like%20to%20know%20more." target="_blank" rel="noopener" role="menuitem" aria-label="WhatsApp chat">
+    <a class="fab-item fab-whatsapp" href="https://wa.me/91999999?text=Hi%20KN%20Overseas%2C%20I%27d%20like%20to%20know%20more." target="_blank" rel="noopener" role="menuitem" aria-label="WhatsApp chat">
       <i class="fa-brands fa-whatsapp"></i>
     </a>
-    <a class="fab-item fab-phone" href="tel:+919999999999" role="menuitem" aria-label="Call us">
+    <a class="fab-item fab-phone" href="tel:+919999999" role="menuitem" aria-label="Call us">
       <i class="fa-solid fa-phone"></i>
     </a>
-    <a class="fab-item fab-mail" href="mailto:info@knoverseas.com" role="menuitem" aria-label="Email us">
+    <a class="fab-item fab-mail" href="mailto:info@knoverseas.example.com" role="menuitem" aria-label="Email us">
       <i class="fa-solid fa-envelope"></i>
     </a>
   </div>
@@ -229,5 +229,6 @@
         
     </script>
 </body>
+
 
 </html>
