--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <!-- Vertical menu -->
         <div id="fabMenu" class="fab-menu" role="menu" aria-label="Chat options">
             <a class="fab-item fab-whatsapp"
-                href="https://wa.me/919999999999?text=Hi%20KN%20Overseas%2C%20I%27d%20like%20to%20know%20more."
+                href="https://wa.me/91999999?text=Hi%20KN%20Overseas%2C%20I%27d%20like%20to%20know%20more."
                 target="_blank" rel="noopener" role="menuitem" aria-label="WhatsApp chat">
                 <i class="fa-brands fa-whatsapp"></i>
             </a>
-            <a class="fab-item fab-phone" href="tel:+919999999999" role="menuitem" aria-label="Call us">
+            <a class="fab-item fab-phone" href="tel:+91999999" role="menuitem" aria-label="Call us">
                 <i class="fa-solid fa-phone"></i>
             </a>
-            <a class="fab-item fab-mail" href="mailto:info@knoverseas.com" role="menuitem" aria-label="Email us">
+            <a class="fab-item fab-mail" href="mailto:info@knoverseas.example.com" role="menuitem" aria-label="Email us">
                 <i class="fa-solid fa-envelope"></i>
             </a>
         </div>
@@ -456,7 +456,7 @@
                 <div class="ct-card">
                     <span class="ct-icon"><i class="fa-solid fa-envelope-open-text"></i></span>
                     <h3>Write To Us</h3>
-                    <p><a href="mailto:info@knoverseas.com">info@knoverseas.com</a></p>
+                    <p><a href="mailto:info@knoverseas.example.com">info@knoverseas.example.com</a></p>
                 </div>
 
                 <div class="ct-card">
@@ -630,7 +630,7 @@
             <p class="kf-help">
                 <i class="fa-solid fa-comments"></i>
                 Have Question?
-                <strong><a href="tel:+918401144494">Free +91 84011 44494</a></strong>
+                <strong><a href="tel:+918401144494">Free +91 8xxxx xxxxx</a></strong>
             </p>
         </div>
 
